--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
+# Stripe
 STRIPE_API_KEY=
+
+#Github
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+#Fauna DB
+FAUNA_DB_KEY=
+
+#NEXTAUTH_SECRET
+NEXTAUTH_SECRET=
