finalizando config do faunadb

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Stripe
 STRIPE_API_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
 
 #Github
 GITHUB_CLIENT_ID=
@@ -7,6 +10,10 @@ GITHUB_CLIENT_SECRET=
 
 #Fauna DB
 FAUNA_DB_KEY=
+FAUNA_DB_DOMAIN=
 
-#NEXTAUTH_SECRET
+#Next-auth
 NEXTAUTH_SECRET=
+
+#NEXTAUTH_URL - example http://localhost:3000
+NEXTAUTH_URL=
