--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,21 @@ STRIPE_API_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
+STRIPE_WEBHOOK_SECRET=
 
 #Github
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-#Fauna DB
-FAUNA_DB_KEY=
+#Fauna DBfnAEhbgxS8AAQyOsQ435cErVA05PblP5k4QwSdU9
 FAUNA_DB_DOMAIN=
 
 #Next-auth
 NEXTAUTH_SECRET=
 
-#NEXTAUTH_URL - example http://localhost:3000
-NEXTAUTH_URL=
+#NEXTAUTH_URL
+NEXTAUTH_URL= #http://localhost:3000
+
+#PRISMIC_ACCESS_TOKEN
+PRISMIC_ACCESS_TOKEN=
+PRISMIC_REPOSITORY_NAME=
