--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@prismicio/client": "^6.4.1",
@@ -18,7 +19,6 @@
     "faunadb": "^4.5.2",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
-    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -26,12 +26,24 @@
     "stripe": "^8.202.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.15",
-    "@types/prismic-dom": "^2.1.1",
     "@types/react": "17.0.39",
+    "babel-jest": "^29.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
+    "ts-jest": "^29.0.5",
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.5"
   }
 }
